--- a/css/selectpaymentmethod.css
+++ b/css/selectpaymentmethod.css
@@ -141,7 +141,8 @@ h1 {
   .nav_bar {
     width: 100%;
     position: relative;
-    padding: 25px; }
+    padding: 25px;
+    height: 90px; }
     .nav_bar img {
       width: auto;
       height: 40px; }
@@ -152,8 +153,13 @@ h1 {
     .nav_bar #nav_prev {
       position: absolute;
       right: 27px;
-      top: 24px;
+      top: 25px;
       font-size: 30px; }
+    .nav_bar #nav_close {
+      position: absolute;
+      right: 27px;
+      top: 30px;
+      font-size: 20px; }
 
   .content {
     padding: 25px 25px 35px 25px;
@@ -235,29 +241,37 @@ h1 {
     color: #afafaf;
     line-height: 17px;
     display: -webkit-inline-box;
-    padding: 15px 0px; } }
+    padding: 15px 0px; }
+
+  .padding-top-25 {
+    padding-top: 25px; } }
 @media (max-width: 479px) {
   .payment_gatemways {
     list-style: none;
-    padding: 0px; }
+    padding: 0px;
+    margin-top: 15px; }
     .payment_gatemways li {
       padding: 20px 0px 20px 0px;
       position: relative;
-      border-bottom: 1px solid #eaeaea; }
+      border-top: 1px solid #eaeaea;
+      height: 80px; }
       .payment_gatemways li:after {
         position: absolute;
-        right: 10px;
-        top: 10px;
+        right: 24px;
+        top: 20px;
         content: "\203A";
         display: inline-block;
         font-size: 22px;
         cursor: pointer;
         color: #f07322; }
+      .payment_gatemways li:last-child {
+        border-bottom: 1px solid #eaeaea; }
     .payment_gatemways img {
       width: auto; }
     .payment_gatemways #tez {
-      height: 40px; }
+      height: 38px; }
     .payment_gatemways #upi {
-      height: 20px; } }
+      height: 18px;
+      margin: 9px 0px 0px 6px; } }
 
 /*# sourceMappingURL=selectpaymentmethod.css.map */
