--- a/css/upipayment.css
+++ b/css/upipayment.css
@@ -141,7 +141,8 @@ h1 {
   .nav_bar {
     width: 100%;
     position: relative;
-    padding: 25px; }
+    padding: 25px;
+    height: 90px; }
     .nav_bar img {
       width: auto;
       height: 40px; }
@@ -152,8 +153,13 @@ h1 {
     .nav_bar #nav_prev {
       position: absolute;
       right: 27px;
-      top: 24px;
+      top: 25px;
       font-size: 30px; }
+    .nav_bar #nav_close {
+      position: absolute;
+      right: 27px;
+      top: 30px;
+      font-size: 20px; }
 
   .content {
     padding: 25px 25px 35px 25px;
@@ -235,7 +241,10 @@ h1 {
     color: #afafaf;
     line-height: 17px;
     display: -webkit-inline-box;
-    padding: 15px 0px; } }
+    padding: 15px 0px; }
+
+  .padding-top-25 {
+    padding-top: 25px; } }
 @media (max-width: 479px) {
   .container {
     padding: 25px 20px 5px; }
