--- a/css/viewplans.css
+++ b/css/viewplans.css
@@ -53,7 +53,8 @@ h1 {
   .form-group input {
     border: solid 1px #B8B8B8;
     font-size: 19px;
-    height: 46px; }
+    height: 46px;
+    padding: 2px 0px 0px 10px; }
     .form-group input:focus {
       border-color: #F07322;
       box-shadow: 0px 0px #fff; }
