--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -82,6 +82,7 @@ h1{
         border: solid 1px #B8B8B8;
         font-size: 19px;
         height: 46px;
+        padding: 2px 0px 0px 10px;
         &:focus{
           border-color: #F07322;
           box-shadow: 0px 0px #fff;
