--- a/scss/viewplans.scss
+++ b/scss/viewplans.scss
@@ -37,9 +37,10 @@
     .recharge_plans {
         // padding: 15px 0px;
 
-        .plan {
+        a.plan {
             border-bottom: solid 1px #eaeaea;
             padding: 20px 0px;
+            display: block;
             h3 {
                 font-size: 20px;
                 font-weight: 500;
