--- a/css/selectcard.css
+++ b/css/selectcard.css
@@ -265,52 +265,49 @@ h1 {
   .padding-top-25 {
     padding-top: 25px; } }
 @media (max-width: 479px) {
-  .container {
-    padding: 25px 20px 5px; }
-
-  .recharge_summary {
-    padding: 0px 0px; }
-    .recharge_summary .field_label {
-      display: block;
-      font-size: 11px;
-      font-weight: 500;
-      letter-spacing: -0.3px;
-      color: #575757; }
-    .recharge_summary > span {
-      width: 49%;
-      display: inline-block;
-      vertical-align: top; }
-    .recharge_summary .operator img {
-      height: 40px;
-      width: auto;
-      display: inline-block; }
-    .recharge_summary .operator .operator_name {
-      font-size: 16px;
-      line-height: 2.75;
-      letter-spacing: 0.1px;
-      text-align: left;
-      color: #2e2e2e; }
-    .recharge_summary .cost {
-      text-align: right; }
-      .recharge_summary .cost .amount {
-        font-size: 20px;
-        font-weight: 500;
-        letter-spacing: 0.4px;
-        color: #575757;
-        line-height: 47px; }
-
-  .cancel_transactions {
-    display: block;
-    text-align: center; }
-    .cancel_transactions span {
-      margin-left: 10px;
+  .select_card {
+    background-color: #fff; }
+    .select_card h3 {
+      margin: 0px;
       font-size: 15px;
-      line-height: 3.38;
-      letter-spacing: -0.2px;
-      color: #565656; }
+      font-weight: 600;
+      font-family: "gotham-bold";
+      letter-spacing: -0.3px;
+      color: #343434;
+      padding: 15px;
+      border-bottom: solid 1px #e5e5e5; }
+    .select_card ul {
+      list-style: none;
+      padding: 0px 15px; }
+    .select_card li {
+      padding: 15px 0px; }
+      .select_card li img {
+        background-color: #f6f6f6;
+        border: solid 1px #e1e1e1;
+        border-radius: 3px;
+        padding: 5px;
+        height: 20px;
+        display: inline-block;
+        vertical-align: top;
+        margin: 10px; }
+      .select_card li .card_item > div {
+        display: inline-block;
+        vertical-align: top; }
+      .select_card li .card_cvv_form {
+        margin-top: 10px; }
+        .select_card li .card_cvv_form input {
+          height: 46px;
+          border-radius: 4px;
+          background-color: #ffffff;
+          border: solid 1px #f07322;
+          width: 48%;
+          vertical-align: bottom;
+          padding: 10px; }
+        .select_card li .card_cvv_form button {
+          width: 48%; }
+      .select_card li span {
+        display: block; }
+    .select_card > #pay_button {
+      margin: 0px 15px 15px; } }
 
-  .powered-by {
-    margin: 0px auto;
-    display: block; } }
-
-/*# sourceMappingURL=upipayment.css.map */
+/*# sourceMappingURL=selectcard.css.map */
