--- a/css/tezpayment.css
+++ b/css/tezpayment.css
@@ -12,7 +12,7 @@
   src: url("../fonts/Gotham Pro/GothaProMed.otf"); }
 body {
   font-family: "gotham-medium", sans-serif;
-  background-color: #F5F5F5; }
+  background-color: #f5f5f5; }
 
 h1 {
   font-size: 11px;
@@ -27,13 +27,14 @@ h1 {
   color: #575757; }
 
 .page_division {
-  color: #EAEAEA;
+  color: #eaeaea;
   border-width: 1px;
   margin: 15px 0px; }
 
 .form-group {
   position: relative;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  margin-top: 22px; }
   .form-group a {
     text-decoration: none;
     color: #f07332; }
@@ -48,15 +49,14 @@ h1 {
     text-align: center; }
   .form-group .input-group {
     width: 100%;
-    margin-bottom: 22px;
     height: 46px; }
   .form-group input {
-    border: solid 1px #B8B8B8;
+    border: solid 1px #b8b8b8;
     font-size: 19px;
     height: 46px;
     padding: 2px 0px 0px 10px; }
     .form-group input:focus {
-      border-color: #F07322;
+      border-color: #f07322;
       box-shadow: 0px 0px #fff; }
   .form-group .btn-right {
     position: absolute;
@@ -94,7 +94,10 @@ h1 {
 .button {
   border-radius: 4px;
   border-width: 0px;
-  padding: 7px; }
+  padding: 7px;
+  height: 46px;
+  padding: 7px;
+  font-size: 21px; }
   .button:focus {
     outline: none;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
@@ -102,13 +105,19 @@ h1 {
     width: 100%; }
   .button.primary {
     background-color: #f07322;
-    color: #fff;
-    padding: 7px;
-    font-size: 21px;
-    height: 46px; }
+    color: #fff; }
   .button:disabled {
     background-color: #d8d8d8;
     color: #fff; }
+  .button.white {
+    border: solid 1px #e3e3e3;
+    border-radius: 4px;
+    background-color: #fff;
+    font-weight: 300;
+    font-family: "gotham-thin";
+    font-size: 14px;
+    height: auto;
+    padding: 4px 9px; }
 
 .horizontal_tabs {
   padding: 0px;
@@ -134,9 +143,18 @@ h1 {
     cursor: pointer;
     background-color: #f5f5f5; }
     .horizontal_tabs li.active {
-      color: #F07322;
+      color: #f07322;
       border-bottom-color: #f07322;
       background-color: white; }
+
+.form_message {
+  font-family: "gotham-thin";
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.36;
+  letter-spacing: 0.1px;
+  text-align: left;
+  color: #828282; }
 
 @media (max-width: 479px) {
   .nav_bar {
