--- a/css/paymentsuccess.css
+++ b/css/paymentsuccess.css
@@ -20,7 +20,8 @@ h1 {
 
 .container {
   padding: 0px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  display: grid; }
 
 .sub_heading {
   font-size: 15px;
@@ -33,8 +34,7 @@ h1 {
 
 .form-group {
   position: relative;
-  margin-bottom: 5px;
-  margin-top: 22px; }
+  margin-bottom: 5px; }
   .form-group a {
     text-decoration: none;
     color: #f07332; }
@@ -58,16 +58,6 @@ h1 {
     .form-group input:focus {
       border-color: #f07322;
       box-shadow: 0px 0px #fff; }
-  .form-group .btn-right {
-    position: absolute;
-    bottom: 13px;
-    right: 17px;
-    z-index: 3;
-    cursor: pointer;
-    font-size: 13px;
-    letter-spacing: -0.1px;
-    color: #f07322;
-    font-family: "gotham-regular"; }
   .form-group .input-logo {
     position: absolute;
     right: 0px;
@@ -86,10 +76,11 @@ h1 {
 .control-label {
   font-size: 13px;
   display: block;
-  color: #ababab;
+  color: #2e2e2e;
   letter-spacing: -0.13px;
-  font-family: "gotham-medium";
-  font-weight: normal; }
+  font-family: "gotham-regular";
+  font-weight: normal;
+  margin-top: 15px; }
 
 .button {
   border-radius: 4px;
@@ -97,7 +88,8 @@ h1 {
   padding: 7px;
   height: 46px;
   padding: 7px;
-  font-size: 21px; }
+  font-size: 21px;
+  color: white; }
   .button:focus {
     outline: none;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
@@ -107,8 +99,7 @@ h1 {
     background-color: #f07322;
     color: #fff; }
   .button:disabled {
-    background-color: #d8d8d8;
-    color: #fff; }
+    background-color: #D8D8D8; }
   .button.white {
     border: solid 1px #e3e3e3;
     border-radius: 4px;
@@ -142,6 +133,8 @@ h1 {
     color: #575757;
     cursor: pointer;
     background-color: #f5f5f5; }
+    .horizontal_tabs li:first-child {
+      border-left: none; }
     .horizontal_tabs li.active {
       color: #f07322;
       border-bottom-color: #f07322;
@@ -181,7 +174,7 @@ h1 {
       font-size: 20px; }
 
   .content {
-    padding: 25px 25px 35px 25px;
+    padding: 25px;
     background-color: white; }
 
   .content-list {
@@ -270,7 +263,7 @@ h1 {
     font-weight: 300;
     letter-spacing: -0.5px;
     text-align: left;
-    padding: 10px 20px; }
+    padding-top: 30px; }
     .payment_status .status_symbol {
       color: #58ac15;
       border-radius: 100%;
@@ -283,7 +276,10 @@ h1 {
       line-height: 20px; }
     .payment_status .status_message {
       color: #58ac15;
-      display: inline-block; }
+      display: inline-block;
+      font-family: "gotham-regular";
+      font-size: 22px;
+      vertical-align: sub; }
     .payment_status p {
       font-family: "gotham-thin";
       font-weight: 300;
@@ -291,17 +287,17 @@ h1 {
       font-size: 14px; }
 
   .payment_detail_block {
-    padding: 10px 20px; }
+    padding: 10px 0px; }
     .payment_detail_block label {
-      font-family: "gotham-thin";
-      font-size: 14px;
-      font-weight: 300;
-      line-height: 1.45;
-      letter-spacing: -0.3px;
-      text-align: left;
-      color: #575757; }
+      font-size: 13px;
+      display: block;
+      color: #ababab;
+      letter-spacing: -0.13px;
+      font-family: "gotham-regular";
+      font-weight: normal;
+      margin-bottom: 0px; }
     .payment_detail_block span {
-      font-family: "gotham-bold";
+      font-family: "gotham-regular";
       display: block;
       font-size: 14px;
       font-weight: 600;
@@ -311,8 +307,7 @@ h1 {
       color: #575757; }
 
   .transactions_action {
-    margin: 0px 15px;
-    padding-left: 10px;
+    padding-left: 0px;
     font-size: 13px;
     line-height: 3.38;
     letter-spacing: -0.2px;
@@ -329,6 +324,8 @@ h1 {
     .transactions_action span {
       display: inline-block;
       vertical-align: super;
-      margin-left: 10px; } }
+      margin-left: 10px; }
+    .transactions_action:last-child {
+      border-bottom: 1px solid #eaeaea; } }
 
 /*# sourceMappingURL=paymentsuccess.css.map */
