--- a/css/selectcard.css
+++ b/css/selectcard.css
@@ -20,7 +20,8 @@ h1 {
 
 .container {
   padding: 0px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  display: grid; }
 
 .sub_heading {
   font-size: 15px;
@@ -33,8 +34,7 @@ h1 {
 
 .form-group {
   position: relative;
-  margin-bottom: 5px;
-  margin-top: 22px; }
+  margin-bottom: 5px; }
   .form-group a {
     text-decoration: none;
     color: #f07332; }
@@ -58,16 +58,6 @@ h1 {
     .form-group input:focus {
       border-color: #f07322;
       box-shadow: 0px 0px #fff; }
-  .form-group .btn-right {
-    position: absolute;
-    bottom: 13px;
-    right: 17px;
-    z-index: 3;
-    cursor: pointer;
-    font-size: 13px;
-    letter-spacing: -0.1px;
-    color: #f07322;
-    font-family: "gotham-regular"; }
   .form-group .input-logo {
     position: absolute;
     right: 0px;
@@ -86,10 +76,11 @@ h1 {
 .control-label {
   font-size: 13px;
   display: block;
-  color: #ababab;
+  color: #2e2e2e;
   letter-spacing: -0.13px;
-  font-family: "gotham-medium";
-  font-weight: normal; }
+  font-family: "gotham-regular";
+  font-weight: normal;
+  margin-top: 15px; }
 
 .button {
   border-radius: 4px;
@@ -97,7 +88,8 @@ h1 {
   padding: 7px;
   height: 46px;
   padding: 7px;
-  font-size: 21px; }
+  font-size: 21px;
+  color: white; }
   .button:focus {
     outline: none;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
@@ -107,8 +99,7 @@ h1 {
     background-color: #f07322;
     color: #fff; }
   .button:disabled {
-    background-color: #d8d8d8;
-    color: #fff; }
+    background-color: #D8D8D8; }
   .button.white {
     border: solid 1px #e3e3e3;
     border-radius: 4px;
@@ -142,6 +133,8 @@ h1 {
     color: #575757;
     cursor: pointer;
     background-color: #f5f5f5; }
+    .horizontal_tabs li:first-child {
+      border-left: none; }
     .horizontal_tabs li.active {
       color: #f07322;
       border-bottom-color: #f07322;
@@ -181,7 +174,7 @@ h1 {
       font-size: 20px; }
 
   .content {
-    padding: 25px 25px 35px 25px;
+    padding: 25px;
     background-color: white; }
 
   .content-list {
