--- a/scss/rechargeinput.scss
+++ b/scss/rechargeinput.scss
@@ -11,25 +11,49 @@
 
 @media (max-width: 479px) {
     .selected_operator {
-        margin: 0px;
+        margin: 20px 0px;
+        font-family: $medium-font;
         img {
-            height: 24px;
-            display: inline-block;
-            vertical-align: middle;
+          height: 30px;
+          display: inline-block;
+          vertical-align: top;
+          margin-right: 5px;
         }
         span {
-            font-family: $thin-font;
-            font-size: 18px;
+            font-size: 14px;
             color: #2e2e2e;
             letter-spacing: 0.11px;
-            line-height: 44px;
+            line-height: 14px;
+        }
+        .selected_circle_info{
+          display: inline-block;
+        }
+        .selected_operator_circle{
+          font-family: $thin-font;
+          font-size: 14px;
+          letter-spacing: 0.11px;
+          display: block;
+        }
+        .btn-right {
+            cursor: pointer;
+            margin-top: 5px;
+            float: right;
+            a{
+              font-size: 13px;
+              letter-spacing: -0.1px;
+              color: #f07322;
+              font-family: $regular-font;
+              border: 1px solid #D5D5D5;
+              padding: 5px 7px;
+              border-radius: 4px;
+            }
         }
     }
     .recharge_form {
         padding: 0px 0px 0px 0px;
     }
     .view_plans {
-        padding: 5px 15px;
+        padding: 15px 15px 0px 15px;
         border-top: 1px solid #d1d1d1;
         background-color: #fff;
         h3 {
@@ -47,7 +71,6 @@
         li {
             border-top: solid 1px #e5e5e5;
             padding: 15px 10px;
-
             img {
                 height: 30px;
                 display: inline-block;
@@ -61,12 +84,14 @@
                     line-height: 1.18;
                     letter-spacing: 0.1px;
                     text-align: left;
-                    color: #b0b0b0;
+                    color: #989898;
+                    font-family: $medium-font;
                 }
                 .past_area {
                     display: block;
                     font-weight: 500;
-                    color: #989898;
+                    color: #B0B0B0;
+                    font-family: $regular-font;
                 }
             }
             > span {
@@ -78,6 +103,7 @@
                 padding: 5px 10px;
                 line-height: 20px;
                 font-size: 14px;
+                color: #8e8e8e;
             }
         }
     }
