--- a/scss/selectpaymentmethod.scss
+++ b/scss/selectpaymentmethod.scss
@@ -22,6 +22,9 @@
             a {
                 display: block;
             }
+            &:hover{
+              background-color: #f7f7f7;
+            }
             &:after {
                 position: absolute;
                 right: 24px;
