--- a/css/rechargeinput.css
+++ b/css/rechargeinput.css
@@ -142,12 +142,11 @@ h1 {
 
 .form_message {
   font-family: "gotham-thin";
-  font-size: 14px;
-  font-weight: 300;
+  font-size: 12px;
   line-height: 1.36;
   letter-spacing: 0.1px;
   text-align: left;
-  color: #828282; }
+  color: #ababab; }
 
 @media (max-width: 479px) {
   .nav_bar {
@@ -180,6 +179,10 @@ h1 {
   .content-list {
     padding: 0px 25px;
     background-color: white; }
+    .content-list .section-title {
+      font-size: 14px;
+      color: #969696;
+      margin: 20px 0px; }
 
   .content-grid {
     padding: 20px 25px 12px 25px;
@@ -265,7 +268,8 @@ h1 {
       height: 30px;
       display: inline-block;
       vertical-align: top;
-      margin-right: 5px; }
+      margin-right: 5px;
+      margin-top: 2px; }
     .selected_operator span {
       font-size: 14px;
       color: #2e2e2e;
@@ -290,12 +294,16 @@ h1 {
         border: 1px solid #D5D5D5;
         padding: 5px 7px;
         border-radius: 4px; }
+    .selected_operator .select_different_operator {
+      width: 11px;
+      height: 6px;
+      margin-top: 13px;
+      margin-left: 7px; }
 
   .recharge_form {
     padding: 0px 0px 0px 0px; }
 
   .view_plans {
-    padding: 15px 15px 0px 15px;
     border-top: 1px solid #d1d1d1;
     background-color: #fff; }
     .view_plans h3 {
@@ -307,12 +315,15 @@ h1 {
       margin: 10px; }
     .view_plans ul {
       padding: 0px;
-      list-style: none; }
+      list-style: none;
+      margin-bottom: 0px; }
     .view_plans li {
       border-top: solid 1px #e5e5e5;
       padding: 15px 10px; }
+      .view_plans li:last-child {
+        border-bottom: solid 1px #e5e5e5; }
       .view_plans li img {
-        height: 30px;
+        height: 20px;
         display: inline-block;
         vertical-align: top;
         margin-right: 10px; }
