--- a/scss/rechargeinput.scss
+++ b/scss/rechargeinput.scss
@@ -18,6 +18,7 @@
           display: inline-block;
           vertical-align: top;
           margin-right: 5px;
+          margin-top: 2px;
         }
         span {
             font-size: 14px;
@@ -48,12 +49,17 @@
               border-radius: 4px;
             }
         }
+        .select_different_operator{
+              width: 11px;
+              height: 6px;
+              margin-top: 13px;
+              margin-left: 7px;
+        }
     }
     .recharge_form {
         padding: 0px 0px 0px 0px;
     }
     .view_plans {
-        padding: 15px 15px 0px 15px;
         border-top: 1px solid #d1d1d1;
         background-color: #fff;
         h3 {
@@ -67,12 +73,16 @@
         ul {
             padding: 0px;
             list-style: none;
+            margin-bottom: 0px;
         }
         li {
             border-top: solid 1px #e5e5e5;
             padding: 15px 10px;
+            &:last-child{
+              border-bottom: solid 1px #e5e5e5;
+            }
             img {
-                height: 30px;
+                height: 20px;
                 display: inline-block;
                 vertical-align: top;
                 margin-right: 10px;
