--- a/scss/tezpayment.scss
+++ b/scss/tezpayment.scss
@@ -21,7 +21,7 @@
                 vertical-align: top;
                 width: calc(100% - 60px);
                 height: 46px;
-                color: #CECECE;
+                color: $billdesk-primary-black;
                 font-size: 19px;
                 padding-top: 8px;
                 float: right;
