--- a/css/tezpayment.css
+++ b/css/tezpayment.css
@@ -173,7 +173,7 @@ h1 {
       font-size: 20px; }
 
   .content {
-    padding: 25px;
+    padding: 20px 25px 35px 25px;
     background-color: white; }
 
   .content-list {
@@ -203,7 +203,7 @@ h1 {
     z-index: -1; }
 
   .recharge_summary {
-    padding: 25px 25px 15px 25px;
+    padding: 15px 25px;
     border-bottom: 1px solid #d5d5d5;
     background-color: white; }
     .recharge_summary .field_label {
@@ -239,7 +239,7 @@ h1 {
     text-align: center;
     margin: 17px 0px;
     height: 46px;
-    background-color: #eaeaea;
+    background-color: #f3f3f3;
     border-radius: 4px; }
     .cancel_transactions span {
       margin-left: 10px;
@@ -269,7 +269,7 @@ h1 {
     vertical-align: top;
     width: calc(100% - 60px);
     height: 46px;
-    color: #CECECE;
+    color: #2e2e2e;
     font-size: 19px;
     padding-top: 8px;
     float: right;
