--- a/css/selectpaymentmethod.css
+++ b/css/selectpaymentmethod.css
@@ -246,7 +246,7 @@ h1 {
       font-size: 15px;
       line-height: 3.38;
       letter-spacing: -0.2px;
-      color: #868686;
+      color: #b3b3b3;
       font-family: "gotham-regular"; }
 
   .disclaimer {
