--- a/css/paymentsuccess.css
+++ b/css/paymentsuccess.css
@@ -10,6 +10,13 @@
 @font-face {
   font-family: "gotham-medium";
   src: url("../fonts/Gotham Pro/GothaProMed.otf"); }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0;
+  /* <-- Apparently some margin are still there even though it's hidden */ }
+
 body {
   font-family: "gotham-medium", sans-serif;
   background-color: #f5f5f5; }
@@ -20,8 +27,7 @@ h1 {
 
 .container {
   padding: 0px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-  display: grid; }
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); }
 
 .sub_heading {
   font-size: 15px;
@@ -80,7 +86,7 @@ h1 {
   letter-spacing: -0.13px;
   font-family: "gotham-regular";
   font-weight: normal;
-  margin-top: 15px; }
+  padding-top: 15px; }
 
 .button {
   border-radius: 4px;
@@ -235,19 +241,22 @@ h1 {
         text-align: left;
         color: #2e2e2e; }
 
-  .cancel_transactions {
+  .secondary_button {
     text-align: center;
     margin: 17px 0px;
     height: 46px;
     background-color: #f3f3f3;
     border-radius: 4px; }
-    .cancel_transactions span {
-      margin-left: 10px;
+    .secondary_button span {
+      margin-left: 5px;
       font-size: 15px;
       line-height: 3.38;
       letter-spacing: -0.2px;
       color: #b3b3b3;
       font-family: "gotham-regular"; }
+    .secondary_button img {
+      width: 18px;
+      vertical-align: sub; }
 
   .disclaimer {
     font-size: 11px;
@@ -256,36 +265,30 @@ h1 {
     color: #afafaf;
     line-height: 17px;
     display: -webkit-inline-box;
-    padding: 15px 0px; }
+    padding: 15px 0px;
+    margin: 0px; }
 
   .padding-top-25 {
     padding-top: 25px; } }
 @media (max-width: 479px) {
   .payment_status {
     font-size: 16px;
-    font-weight: 300;
     letter-spacing: -0.5px;
     text-align: left;
     padding-top: 30px; }
-    .payment_status .status_symbol {
-      color: #58ac15;
-      border-radius: 100%;
-      border: 1px solid #58ac15;
-      height: 20px;
-      display: inline-block;
-      width: 20px;
-      text-align: center;
-      font-size: 12px;
-      line-height: 20px; }
+    .payment_status .status_symbol img {
+      width: 20px; }
     .payment_status .status_message {
-      color: #58ac15;
       display: inline-block;
-      font-family: "gotham-regular";
+      font-family: "gotham-thin";
       font-size: 22px;
       vertical-align: sub; }
+    .payment_status .success {
+      color: #58ac15; }
+    .payment_status .failed {
+      color: #E50600; }
     .payment_status p {
-      font-family: "gotham-thin";
-      font-weight: 300;
+      font-family: "gotham-regular";
       display: block;
       font-size: 14px; }
 
@@ -319,11 +322,8 @@ h1 {
     border-width: 1px 0px 0px;
     border-color: #eaeaea;
     border-style: solid; }
-    .transactions_action svg {
-      height: 20px;
-      width: 20px;
-      margin-top: 15px;
-      fill: #f07322; }
+    .transactions_action img {
+      width: 20px; }
     .transactions_action span {
       display: inline-block;
       vertical-align: super;
