--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -239,7 +239,7 @@ h1 {
         // box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
     }
     .content-list {
-        padding: 0px 25px;
+        padding: 1px 25px;
         background-color: white;
         .section-title{
           font-size: 14px;
@@ -342,5 +342,8 @@ h1 {
     }
     .padding-top-25 {
         padding-top: 25px;
+    }
+    .network_circles_list{
+
     }
 } //end of this section
